Fix sql copy/export is randomly ordered

Use a vector instead of a QSet which will have random ordering

BUG: 461419