addons/katesql/dataoutputwidget.cpp
@@ -296,8 +296,8 @@ void DataOutputWidget::exportData(QTextStream &stream,
     QElapsedTimer t;
     t.start();
 
-    QSet<int> columns;
-    QSet<int> rows;
+    std::vector<int> columns;
+    std::vector<int> rows;
     QHash<QPair<int, int>, QString> snapshot;
 
     const QModelIndexList selectedIndexes = selectionModel->selectedIndexes();
@@ -310,12 +310,8 @@ void DataOutputWidget::exportData(QTextStream &stream,
         const int col = index.column();
         const int row = index.row();
 
-        if (!columns.contains(col)) {
-            columns.insert(col);
-        }
-        if (!rows.contains(row)) {
-            rows.insert(row);
-        }
+        columns.push_back(col);
+        rows.push_back(row);
 
         if (data.typeId() < 7) // is numeric or boolean
         {
@@ -333,14 +329,19 @@ void DataOutputWidget::exportData(QTextStream &stream,
         }
     }
 
+    // uniquify
+    std::sort(rows.begin(), rows.end());
+    std::sort(columns.begin(), columns.end());
+    rows.erase(std::unique(rows.begin(), rows.end()), rows.end());
+    columns.erase(std::unique(columns.begin(), columns.end()), columns.end());
+
     if (opt.testFlag(ExportColumnNames)) {
         if (opt.testFlag(ExportLineNumbers)) {
             stream << fixedFieldDelimiter;
         }
 
-        QSetIterator<int> j(columns);
-        while (j.hasNext()) {
-            const QVariant data = m_model->headerData(j.next(), Qt::Horizontal);
+        for (auto it = columns.begin(); it != columns.end(); ++it) {
+            const QVariant data = m_model->headerData(*it, Qt::Horizontal);
 
             if (stringsQuoteChar != QLatin1Char('\0')) {
                 stream << stringsQuoteChar + data.toString() + stringsQuoteChar;
@@ -348,7 +349,7 @@ void DataOutputWidget::exportData(QTextStream &stream,
                 stream << data.toString();
             }
 
-            if (j.hasNext()) {
+            if (it + 1 != columns.end()) {
                 stream << fixedFieldDelimiter;
             }
         }
@@ -360,11 +361,10 @@ void DataOutputWidget::exportData(QTextStream &stream,
             stream << row + 1 << fixedFieldDelimiter;
         }
 
-        QSetIterator<int> j(columns);
-        while (j.hasNext()) {
-            stream << snapshot.value(qMakePair(row, j.next()));
+        for (auto it = columns.begin(); it != columns.end(); ++it) {
+            stream << snapshot.value(qMakePair(row, *it));
 
-            if (j.hasNext()) {
+            if (it + 1 != columns.end()) {
                 stream << fixedFieldDelimiter;
             }
         }
